src/styles/css/additionnal-styles.css
/* ------------ Main colors ------------ */
/*  
    Option 1 (Dans une gamme similaire) :
        Couleur 1 : #e8505b (rouge)
        Couleur 2 : #455a64 (gris-bleu)
        Couleur 3 : #7b62b3 (violet)
        Couleur 4 : #3c8e87 (vert-bleu)

    Option 2 (Contraste intéressant) :
        Couleur 1 : #e8505b (rouge)
        Couleur 2 : #455a64 (gris-bleu)
        Couleur 3 : #f3e5f5 (rose pâle)
        Couleur 4 : #5c6bc0 (bleu lavande)
*/

/*  
    Option 1 :
        Couleur 1 : #e8505b (rouge)
        Couleur 2 : #455a64 (gris-bleu)
        Couleur 3 : #f06292 (rose) pink-lighten-2
        Couleur 4 : #4db6ac (cyan) teal-lighten-2

    Option 2 :
        Couleur 1 : #e8505b (rouge)
        Couleur 2 : #455a64 (gris-bleu)
        Couleur 3 : #ba68c8 (violet) purple-lighten-2
        Couleur 4 : #81c784 (vert) green-lighten-2
*/
/* ------------ Main colors ------------ */

/* ------------ Typography ------------ */

.text-it-title,
.text-ot-title {
  display: inline-block;
}
.text-it-description,
.text-ot-description {
  display: block;
  margin-top: 1.2rem;
}

.text-it-title,
.text-it-description,
.text-ot-title,
.text-ot-description,
.text-inter-title,
.text-inter-subtitle {
  margin-bottom: 1rem;
}
.intro-section,
about-section,
.projects-section,
.contacts-section {
  width: 100%;
}

@media (min-width: 1200px) {
  .text-it-title {
    font-size: 4.5rem;
  }
  .text-it-description {
    font-size: 1.5rem;
  }
  .text-ot-title {
    font-size: 2.8rem;
  }
  .text-ot-description {
    font-size: 1.4rem;
  }
  .text-inter-title {
    font-size: 3rem;
  }
  .text-inter-subtitle {
    font-size: 2rem;
  }
}
/* ------------ Typography ------------ */

